parser.output
Terminals unused in grammar

   SMALL_BEGIN
   SMALL_END
   INS_BEGIN
   INS_END


State 51 conflicts: 18 shift/reduce, 14 reduce/reduce


Grammar

    0 $accept: START $end

    1 START: %empty
    2      | HTML_BEGIN BODY HTML_END
    3      | error '\n'

    4 BODY: %empty
    5     | BODY_BEGIN TAG_TEXT BODY_END

    6 TAG_TEXT: %empty
    7         | TEXT TAG_TEXT
    8         | HEADER_1_BEGIN TEXT_STR HEADER_1_END TAG_TEXT
    9         | HEADER_2_BEGIN TEXT_STR HEADER_2_END TAG_TEXT
   10         | HEADER_3_BEGIN TEXT_STR HEADER_3_END TAG_TEXT
   11         | PARA_BEGIN TEXT_STR TAG_TEXT PARA_END TAG_TEXT
   12         | BOLD_BEGIN TEXT_STR TAG_TEXT BOLD_END TAG_TEXT
   13         | ITALIC_BEGIN TEXT_STR TAG_TEXT ITALIC_END TAG_TEXT
   14         | EMPH_BEGIN TEXT_STR TAG_TEXT EMPH_END TAG_TEXT
   15         | DEL_BEGIN TEXT_STR TAG_TEXT DEL_END TAG_TEXT
   16         | STRONG_BEGIN TEXT_STR TAG_TEXT STRONG_END TAG_TEXT
   17         | SUB_BEGIN TEXT_STR TAG_TEXT SUB_END TAG_TEXT
   18         | SUP_BEGIN TEXT_STR TAG_TEXT SUP_END TAG_TEXT
   19         | MARK_BEGIN TEXT_STR TAG_TEXT MARK_END TAG_TEXT
   20         | TABLE_BEGIN TEXT_STR TAG_TEXT TABLE_END TAG_TEXT
   21         | TR_BEGIN TEXT_STR TAG_TEXT TR_END TAG_TEXT
   22         | TH_BEGIN TEXT_STR TAG_TEXT TH_END TAG_TEXT
   23         | TD_BEGIN TEXT_STR TAG_TEXT TD_END TAG_TEXT
   24         | CAPTION_BEGIN TEXT_STR TAG_TEXT CAPTION_END TAG_TEXT

   25 TEXT_STR: %empty
   26         | TEXT_STR TEXT


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3
error (256) 3
HTML_BEGIN (258) 2
HTML_END (259) 2
BODY_BEGIN (260) 5
BODY_END (261) 5
HEADER_1_BEGIN (262) 8
HEADER_1_END (263) 8
HEADER_2_BEGIN (264) 9
HEADER_2_END (265) 9
HEADER_3_BEGIN (266) 10
HEADER_3_END (267) 10
PARA_BEGIN (268) 11
PARA_END (269) 11
BOLD_BEGIN (270) 12
BOLD_END (271) 12
STRONG_BEGIN (272) 16
STRONG_END (273) 16
ITALIC_BEGIN (274) 13
ITALIC_END (275) 13
EMPH_BEGIN (276) 14
EMPH_END (277) 14
MARK_BEGIN (278) 19
MARK_END (279) 19
SMALL_BEGIN (280)
SMALL_END (281)
DEL_BEGIN (282) 15
DEL_END (283) 15
INS_BEGIN (284)
INS_END (285)
SUB_BEGIN (286) 17
SUB_END (287) 17
SUP_BEGIN (288) 18
SUP_END (289) 18
TABLE_BEGIN (290) 20
TABLE_END (291) 20
TR_BEGIN (292) 21
TR_END (293) 21
TH_BEGIN (294) 22
TH_END (295) 22
TD_BEGIN (296) 23
TD_END (297) 23
CAPTION_BEGIN (298) 24
CAPTION_END (299) 24
TEXT (300) 7 26


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
START (48)
    on left: 1 2 3, on right: 0
BODY (49)
    on left: 4 5, on right: 2
TAG_TEXT (50)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24,
    on right: 5 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
TEXT_STR (51)
    on left: 25 26, on right: 8 9 10 11 12 13 14 15 16 17 18 19 20
    21 22 23 24 26


State 0

    0 $accept: . START $end

    error       shift, and go to state 1
    HTML_BEGIN  shift, and go to state 2

    $end  reduce using rule 1 (START)

    START  go to state 3


State 1

    3 START: error . '\n'

    '\n'  shift, and go to state 4


State 2

    2 START: HTML_BEGIN . BODY HTML_END

    BODY_BEGIN  shift, and go to state 5

    $default  reduce using rule 4 (BODY)

    BODY  go to state 6


State 3

    0 $accept: START . $end

    $end  shift, and go to state 7


State 4

    3 START: error '\n' .

    $default  reduce using rule 3 (START)


State 5

    5 BODY: BODY_BEGIN . TAG_TEXT BODY_END

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 25

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 26


State 6

    2 START: HTML_BEGIN BODY . HTML_END

    HTML_END  shift, and go to state 27


State 7

    0 $accept: START $end .

    $default  accept


State 8

    8 TAG_TEXT: HEADER_1_BEGIN . TEXT_STR HEADER_1_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 28


State 9

    9 TAG_TEXT: HEADER_2_BEGIN . TEXT_STR HEADER_2_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 29


State 10

   10 TAG_TEXT: HEADER_3_BEGIN . TEXT_STR HEADER_3_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 30


State 11

   11 TAG_TEXT: PARA_BEGIN . TEXT_STR TAG_TEXT PARA_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 31


State 12

   12 TAG_TEXT: BOLD_BEGIN . TEXT_STR TAG_TEXT BOLD_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 32


State 13

   16 TAG_TEXT: STRONG_BEGIN . TEXT_STR TAG_TEXT STRONG_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 33


State 14

   13 TAG_TEXT: ITALIC_BEGIN . TEXT_STR TAG_TEXT ITALIC_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 34


State 15

   14 TAG_TEXT: EMPH_BEGIN . TEXT_STR TAG_TEXT EMPH_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 35


State 16

   19 TAG_TEXT: MARK_BEGIN . TEXT_STR TAG_TEXT MARK_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 36


State 17

   15 TAG_TEXT: DEL_BEGIN . TEXT_STR TAG_TEXT DEL_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 37


State 18

   17 TAG_TEXT: SUB_BEGIN . TEXT_STR TAG_TEXT SUB_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 38


State 19

   18 TAG_TEXT: SUP_BEGIN . TEXT_STR TAG_TEXT SUP_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 39


State 20

   20 TAG_TEXT: TABLE_BEGIN . TEXT_STR TAG_TEXT TABLE_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 40


State 21

   21 TAG_TEXT: TR_BEGIN . TEXT_STR TAG_TEXT TR_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 41


State 22

   22 TAG_TEXT: TH_BEGIN . TEXT_STR TAG_TEXT TH_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 42


State 23

   23 TAG_TEXT: TD_BEGIN . TEXT_STR TAG_TEXT TD_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 43


State 24

   24 TAG_TEXT: CAPTION_BEGIN . TEXT_STR TAG_TEXT CAPTION_END TAG_TEXT

    $default  reduce using rule 25 (TEXT_STR)

    TEXT_STR  go to state 44


State 25

    7 TAG_TEXT: TEXT . TAG_TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 25

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 45


State 26

    5 BODY: BODY_BEGIN TAG_TEXT . BODY_END

    BODY_END  shift, and go to state 46


State 27

    2 START: HTML_BEGIN BODY HTML_END .

    $default  reduce using rule 2 (START)


State 28

    8 TAG_TEXT: HEADER_1_BEGIN TEXT_STR . HEADER_1_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_END  shift, and go to state 47
    TEXT          shift, and go to state 48


State 29

    9 TAG_TEXT: HEADER_2_BEGIN TEXT_STR . HEADER_2_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_2_END  shift, and go to state 49
    TEXT          shift, and go to state 48


State 30

   10 TAG_TEXT: HEADER_3_BEGIN TEXT_STR . HEADER_3_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_3_END  shift, and go to state 50
    TEXT          shift, and go to state 48


State 31

   11 TAG_TEXT: PARA_BEGIN TEXT_STR . TAG_TEXT PARA_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 52


State 32

   12 TAG_TEXT: BOLD_BEGIN TEXT_STR . TAG_TEXT BOLD_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 53


State 33

   16 TAG_TEXT: STRONG_BEGIN TEXT_STR . TAG_TEXT STRONG_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 54


State 34

   13 TAG_TEXT: ITALIC_BEGIN TEXT_STR . TAG_TEXT ITALIC_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 55


State 35

   14 TAG_TEXT: EMPH_BEGIN TEXT_STR . TAG_TEXT EMPH_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 56


State 36

   19 TAG_TEXT: MARK_BEGIN TEXT_STR . TAG_TEXT MARK_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 57


State 37

   15 TAG_TEXT: DEL_BEGIN TEXT_STR . TAG_TEXT DEL_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 58


State 38

   17 TAG_TEXT: SUB_BEGIN TEXT_STR . TAG_TEXT SUB_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 59


State 39

   18 TAG_TEXT: SUP_BEGIN TEXT_STR . TAG_TEXT SUP_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 60


State 40

   20 TAG_TEXT: TABLE_BEGIN TEXT_STR . TAG_TEXT TABLE_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 61


State 41

   21 TAG_TEXT: TR_BEGIN TEXT_STR . TAG_TEXT TR_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 62


State 42

   22 TAG_TEXT: TH_BEGIN TEXT_STR . TAG_TEXT TH_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 63


State 43

   23 TAG_TEXT: TD_BEGIN TEXT_STR . TAG_TEXT TD_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 64


State 44

   24 TAG_TEXT: CAPTION_BEGIN TEXT_STR . TAG_TEXT CAPTION_END TAG_TEXT
   26 TEXT_STR: TEXT_STR . TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 51

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 65


State 45

    7 TAG_TEXT: TEXT TAG_TEXT .

    $default  reduce using rule 7 (TAG_TEXT)


State 46

    5 BODY: BODY_BEGIN TAG_TEXT BODY_END .

    $default  reduce using rule 5 (BODY)


State 47

    8 TAG_TEXT: HEADER_1_BEGIN TEXT_STR HEADER_1_END . TAG_TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 25

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 66


State 48

   26 TEXT_STR: TEXT_STR TEXT .

    $default  reduce using rule 26 (TEXT_STR)


State 49

    9 TAG_TEXT: HEADER_2_BEGIN TEXT_STR HEADER_2_END . TAG_TEXT

    HEADER_1_BEGIN  shift, and go to state 8
    HEADER_2_BEGIN  shift, and go to state 9
    HEADER_3_BEGIN  shift, and go to state 10
    PARA_BEGIN      shift, and go to state 11
    BOLD_BEGIN      shift, and go to state 12
    STRONG_BEGIN    shift, and go to state 13
    ITALIC_BEGIN    shift, and go to state 14
    EMPH_BEGIN      shift, and go to state 15
    MARK_BEGIN      shift, and go to state 16
    DEL_BEGIN       shift, and go to state 17
    SUB_BEGIN       shift, and go to state 18
    SUP_BEGIN       shift, and go to state 19
    TABLE_BEGIN     shift, and go to state 20
    TR_BEGIN        shift, and go to state 21
    TH_BEGIN        shift, and go to state 22
    TD_BEGIN        shift, and go to state 23
    CAPTION_BEGIN   shift, and go to state 24
    TEXT            shift, and go to state 25

    $default  reduce using rule 6 (TAG_TEXT)

    TAG_TEXT  go to state 67


State 50

   10 TAG_TEXT: HEADER_3_BEGIN TEXT_STR HEADER_3_END . TAG_TEXT
